tests/negative/gold/abstract9-test.gold
tests/negative/abstract9-test.toit:13:7: error: Non-abstract class 'C' is missing implementations
class C extends B:
      ^
tests/negative/abstract9-test.toit:7:12: note: Missing implementation for 'bar'
  abstract bar
           ^~~
Compilation failed
